# simple_cmake

./: .gitignore  CMakeLists.txt  README.md
include/: span.hpp
src/: main.cpp  span.cpp
vscode_setting/: c_cpp_properties.json  keybindings.json  settings.json
